[package]
name = "intune"
description = "Intune client library"
version = "0.1.0"
edition = "2021"
authors = [
    "David Mulder <dmulder@suse.com>"
]
license = "MPL-2.0"
homepage = "https://github.com/himmelblau-idm/intune"
repository = "https://github.com/himmelblau-idm/intune"

[lib]
name = "intune"
path = "src/lib.rs"

[features]
tpm = ["kanidm-hsm-crypto/tpm"]

[dependencies]
kanidm-hsm-crypto = { path = "../hsm-crypto", features = ["msextensions"] }
openssl = "^0.10.55"
